--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -75,20 +75,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\TempFile.cs" />
+    <Compile Include="Entities\Comment.cs" />
+    <Compile Include="Entities\File.cs" />
+    <Compile Include="Entities\Order.cs" />
+    <Compile Include="Entities\Payment.cs" />
     <Compile Include="LrdrContext.cs" />
-    <Compile Include="Entities\Picture.cs" />
-    <Compile Include="Migrations\201707141102504_init.cs" />
-    <Compile Include="Migrations\201707141102504_init.Designer.cs">
-      <DependentUpon>201707141102504_init.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201707141334570_email_to_org.cs" />
-    <Compile Include="Migrations\201707141334570_email_to_org.Designer.cs">
-      <DependentUpon>201707141334570_email_to_org.cs</DependentUpon>
+    <Compile Include="Migrations\201708100425206_init.cs" />
+    <Compile Include="Migrations\201708100425206_init.Designer.cs">
+      <DependentUpon>201708100425206_init.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Operations\PictureOperations.cs" />
-    <Compile Include="Operations\TempFileOperations.cs" />
     <Compile Include="Operations\UserOperations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Entities\User.cs" />
@@ -105,11 +101,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201707141102504_init.resx">
-      <DependentUpon>201707141102504_init.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201707141334570_email_to_org.resx">
-      <DependentUpon>201707141334570_email_to_org.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201708100425206_init.resx">
+      <DependentUpon>201708100425206_init.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
