--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -80,11 +80,12 @@
     <Compile Include="Entities\Order.cs" />
     <Compile Include="Entities\Payment.cs" />
     <Compile Include="LrdrContext.cs" />
-    <Compile Include="Migrations\201708100505321_init.cs" />
-    <Compile Include="Migrations\201708100505321_init.Designer.cs">
-      <DependentUpon>201708100505321_init.cs</DependentUpon>
+    <Compile Include="Migrations\201708110446048_init.cs" />
+    <Compile Include="Migrations\201708110446048_init.Designer.cs">
+      <DependentUpon>201708110446048_init.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Operations\OrderOperations.cs" />
     <Compile Include="Operations\UserOperations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Entities\User.cs" />
@@ -101,8 +102,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201708100505321_init.resx">
-      <DependentUpon>201708100505321_init.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201708110446048_init.resx">
+      <DependentUpon>201708110446048_init.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
