--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -86,6 +86,7 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Operations\OrderOperations.cs" />
+    <Compile Include="Operations\PageViewDTO.cs" />
     <Compile Include="Operations\UserOperations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Entities\User.cs" />
