--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -116,6 +116,7 @@
   <ItemGroup>
     <Compile Include="BaseControllerTest.cs" />
     <Compile Include="BaseTest.cs" />
+    <Compile Include="Controllers\CommentControllerTest.cs" />
     <Compile Include="Controllers\OrderControllerTest.cs" />
     <Compile Include="Helpers\TestHelpers.cs" />
     <Compile Include="InMemoryHttpContentSerializationHandler.cs" />
