--- a/API/API.csproj
+++ b/API/API.csproj
@@ -218,6 +218,7 @@
     <Compile Include="Common\RESTAuthorizeAttribute.cs" />
     <Compile Include="Common\Security.cs" />
     <Compile Include="Common\ValidateModelAttribute.cs" />
+    <Compile Include="Controllers\CommentController.cs" />
     <Compile Include="Controllers\ICrudController.cs" />
     <Compile Include="Controllers\OrderController.cs" />
     <Compile Include="Controllers\UserController.cs" />
@@ -225,6 +226,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\CommentViewModel.cs" />
     <Compile Include="ViewModels\OrderViewModel.cs" />
     <Compile Include="ViewModels\PageView.cs" />
     <Compile Include="ViewModels\UserViewModel.cs" />
