--- a/API/API.csproj
+++ b/API/API.csproj
@@ -221,6 +221,7 @@
     <Compile Include="Controllers\CommentController.cs" />
     <Compile Include="Controllers\ICrudController.cs" />
     <Compile Include="Controllers\OrderController.cs" />
+    <Compile Include="Controllers\PaymentController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
