Начал тесты для PaymentController

--- a/API/API.csproj
+++ b/API/API.csproj
@@ -230,7 +230,10 @@
     <Compile Include="ViewModels\CommentViewModel.cs" />
     <Compile Include="ViewModels\OrderViewModel.cs" />
     <Compile Include="ViewModels\PageView.cs" />
+    <Compile Include="ViewModels\PaymentViewModel.cs" />
     <Compile Include="ViewModels\UserViewModel.cs" />
+    <Compile Include="ViewModels\YmNotificationViewModel.cs" />
+    <Compile Include="ViewModels\YmOperationDetailsViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\XmlDocument.xml">
