--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Entities\File.cs" />
     <Compile Include="Entities\Order.cs" />
     <Compile Include="Entities\Payment.cs" />
+    <Compile Include="HelpClasses\YmNotification.cs" />
     <Compile Include="LrdrContext.cs" />
     <Compile Include="Migrations\201708110446048_init.cs" />
     <Compile Include="Migrations\201708110446048_init.Designer.cs">
@@ -88,6 +89,7 @@
     <Compile Include="Operations\CommentOperations.cs" />
     <Compile Include="Operations\OrderOperations.cs" />
     <Compile Include="Operations\PageViewDTO.cs" />
+    <Compile Include="Operations\PaymentOperations.cs" />
     <Compile Include="Operations\UserOperations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Entities\User.cs" />
