--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -123,6 +123,7 @@
     <Compile Include="InMemoryHttpContentSerializationHandler.cs" />
     <Compile Include="Operations\CommentOperationsTest.cs" />
     <Compile Include="Operations\OrderOperationsTest.cs" />
+    <Compile Include="Operations\PaymentOperationsTest.cs" />
     <Compile Include="Operations\UsersOperationsTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\UserControllerTest.cs" />
