Начал реализацию FileController

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -117,6 +117,7 @@
     <Compile Include="BaseControllerTest.cs" />
     <Compile Include="BaseTest.cs" />
     <Compile Include="Controllers\CommentControllerTest.cs" />
+    <Compile Include="Controllers\FileControllerTest.cs" />
     <Compile Include="Controllers\OrderControllerTest.cs" />
     <Compile Include="Controllers\PaymentControllerTest.cs" />
     <Compile Include="Helpers\TestHelpers.cs" />
