--- a/API/API.csproj
+++ b/API/API.csproj
@@ -219,6 +219,7 @@
     <Compile Include="Common\Security.cs" />
     <Compile Include="Common\ValidateModelAttribute.cs" />
     <Compile Include="Controllers\CommentController.cs" />
+    <Compile Include="Controllers\FileController.cs" />
     <Compile Include="Controllers\ICrudController.cs" />
     <Compile Include="Controllers\OrderController.cs" />
     <Compile Include="Controllers\PaymentController.cs" />
@@ -228,6 +229,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\CommentViewModel.cs" />
+    <Compile Include="ViewModels\FileViewModel.cs" />
     <Compile Include="ViewModels\OrderViewModel.cs" />
     <Compile Include="ViewModels\PageView.cs" />
     <Compile Include="ViewModels\PaymentViewModel.cs" />
