--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -91,6 +91,10 @@
     <Compile Include="Migrations\201708210607552_form_id_to_files.Designer.cs">
       <DependentUpon>201708210607552_form_id_to_files.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201708230154590_code-for-files.cs" />
+    <Compile Include="Migrations\201708230154590_code-for-files.Designer.cs">
+      <DependentUpon>201708230154590_code-for-files.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Operations\CommentOperations.cs" />
     <Compile Include="Operations\FileOperations.cs" />
@@ -119,6 +123,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201708210607552_form_id_to_files.resx">
       <DependentUpon>201708210607552_form_id_to_files.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708230154590_code-for-files.resx">
+      <DependentUpon>201708230154590_code-for-files.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
