--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Entities\User.cs" />
     <Compile Include="Seeder.cs" />
+    <Compile Include="Tools\EventHandlers.cs" />
     <Compile Include="Tools\Images.cs" />
     <Compile Include="Tools\ModelsSettings.cs" />
     <Compile Include="Tools\Contracts.cs" />
